--- a/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
+++ b/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
@@ -315,30 +315,32 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="gamerCell" rowHeight="75" id="b5c-vX-wrm" customClass="GamerMatchTableViewCell" customModule="GamerMatch" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="75"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="gamerCell" rowHeight="73" id="b5c-vX-wrm" customClass="GamerMatchTableViewCell" customModule="GamerMatch" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="73"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="b5c-vX-wrm" id="4bL-dQ-R3a">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="74.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="72.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Os3-ll-ncq">
-                                                    <rect key="frame" x="15" y="11" width="56.5" height="53"/>
+                                                    <rect key="frame" x="16" y="8" width="56.5" height="56.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="Os3-ll-ncq" secondAttribute="height" multiplier="1:1" id="27u-af-Ifb"/>
+                                                    </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DML-cB-oYd">
-                                                    <rect key="frame" x="87.5" y="23.5" width="272.5" height="26.5"/>
-                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="22"/>
+                                                    <rect key="frame" x="88.5" y="22.5" width="271.5" height="28"/>
+                                                    <fontDescription key="fontDescription" name="ComicSansMS-Bold" family="Comic Sans MS" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="Os3-ll-ncq" firstAttribute="top" secondItem="4bL-dQ-R3a" secondAttribute="topMargin" id="AMY-zy-BDH"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="Os3-ll-ncq" secondAttribute="bottom" id="AhB-6R-SzD"/>
+                                                <constraint firstItem="Os3-ll-ncq" firstAttribute="top" secondItem="4bL-dQ-R3a" secondAttribute="top" constant="8" id="Nb7-As-ERu"/>
                                                 <constraint firstItem="DML-cB-oYd" firstAttribute="leading" secondItem="Os3-ll-ncq" secondAttribute="trailing" constant="16" id="QH8-ww-zzI"/>
                                                 <constraint firstItem="Os3-ll-ncq" firstAttribute="width" secondItem="4bL-dQ-R3a" secondAttribute="width" multiplier="0.15" id="TMw-ED-whU"/>
+                                                <constraint firstItem="Os3-ll-ncq" firstAttribute="leading" secondItem="4bL-dQ-R3a" secondAttribute="leading" constant="16" id="UMl-Lt-Pff"/>
                                                 <constraint firstItem="DML-cB-oYd" firstAttribute="centerY" secondItem="Os3-ll-ncq" secondAttribute="centerY" id="c32-Ir-wtD"/>
-                                                <constraint firstItem="Os3-ll-ncq" firstAttribute="leading" secondItem="4bL-dQ-R3a" secondAttribute="leadingMargin" id="fER-qC-E7X"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="DML-cB-oYd" secondAttribute="trailing" id="jzQ-yb-LQz"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -366,7 +368,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L1H-zu-i8O" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3476" y="-659.82008995502258"/>
+            <point key="canvasLocation" x="4415.1999999999998" y="-659.82008995502258"/>
         </scene>
         <!--Find Gamer-->
         <scene sceneID="lmF-aY-ziP">
@@ -683,7 +685,7 @@
                     </connections>
                 </screenEdgePanGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="3252" y="31.934032983508249"/>
+            <point key="canvasLocation" x="3247" y="31"/>
         </scene>
         <!--Side Menu View Controller-->
         <scene sceneID="2Qy-A4-Jfg">
@@ -808,6 +810,87 @@
                 </panGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="4228" y="-174.06296851574214"/>
+        </scene>
+        <!--Friends-->
+        <scene sceneID="Jnh-M3-UAG">
+            <objects>
+                <viewController id="U5j-hJ-51c" customClass="FriendsViewController" customModule="GamerMatch" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vt3-LP-lRD">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="iNP-CS-PKa">
+                                <rect key="frame" x="0.0" y="64" width="375" height="29"/>
+                                <segments>
+                                    <segment title="Friends"/>
+                                    <segment title="Friend Requests"/>
+                                </segments>
+                            </segmentedControl>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="O0a-ME-iPY">
+                                <rect key="frame" x="0.0" y="92" width="375" height="526"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ddh-SV-oKf">
+                                    <size key="itemSize" width="116" height="133"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="friendCell" id="GkR-o9-ohd" customClass="FriendCollectionViewCell" customModule="GamerMatch" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="116" height="133"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="116" height="133"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gmS-Ny-mHe">
+                                                    <rect key="frame" x="16" y="16" width="84" height="80"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vbG-WM-df1">
+                                                    <rect key="frame" x="8" y="112" width="100" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="vbG-WM-df1" firstAttribute="top" secondItem="gmS-Ny-mHe" secondAttribute="bottom" constant="16" id="10v-gR-KtE"/>
+                                            <constraint firstItem="vbG-WM-df1" firstAttribute="leading" secondItem="GkR-o9-ohd" secondAttribute="leading" constant="8" id="8gG-Dn-1of"/>
+                                            <constraint firstItem="gmS-Ny-mHe" firstAttribute="leading" secondItem="GkR-o9-ohd" secondAttribute="leading" constant="16" id="Acn-yU-fKB"/>
+                                            <constraint firstAttribute="trailing" secondItem="vbG-WM-df1" secondAttribute="trailing" constant="8" id="mx6-zz-SfJ"/>
+                                            <constraint firstAttribute="trailing" secondItem="gmS-Ny-mHe" secondAttribute="trailing" constant="16" id="rxt-F1-Hg3"/>
+                                            <constraint firstAttribute="bottom" secondItem="vbG-WM-df1" secondAttribute="bottom" id="uPK-8D-IFc"/>
+                                            <constraint firstItem="gmS-Ny-mHe" firstAttribute="top" secondItem="GkR-o9-ohd" secondAttribute="top" constant="16" id="vUI-ny-4SQ"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="friendImageView" destination="gmS-Ny-mHe" id="aAG-tv-wOe"/>
+                                            <outlet property="friendUsernameLabel" destination="vbG-WM-df1" id="mUV-eO-1Qo"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="BSC-jW-ELK" firstAttribute="bottom" secondItem="O0a-ME-iPY" secondAttribute="bottom" id="9g7-GR-VeP"/>
+                            <constraint firstItem="iNP-CS-PKa" firstAttribute="leading" secondItem="BSC-jW-ELK" secondAttribute="leading" id="BqP-IG-l2f"/>
+                            <constraint firstItem="iNP-CS-PKa" firstAttribute="top" secondItem="BSC-jW-ELK" secondAttribute="top" id="V6i-7d-gnc"/>
+                            <constraint firstItem="O0a-ME-iPY" firstAttribute="leading" secondItem="BSC-jW-ELK" secondAttribute="leading" id="W7y-Hj-dyn"/>
+                            <constraint firstItem="BSC-jW-ELK" firstAttribute="trailing" secondItem="iNP-CS-PKa" secondAttribute="trailing" id="cv8-02-oSw"/>
+                            <constraint firstItem="O0a-ME-iPY" firstAttribute="top" secondItem="iNP-CS-PKa" secondAttribute="bottom" id="cw2-CM-et8"/>
+                            <constraint firstItem="BSC-jW-ELK" firstAttribute="trailing" secondItem="O0a-ME-iPY" secondAttribute="trailing" id="gEj-gd-E2y"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="BSC-jW-ELK"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Friends" id="Qrj-3g-YuN"/>
+                    <connections>
+                        <outlet property="collectionView" destination="O0a-ME-iPY" id="Cnc-mJ-lVO"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KZB-Vp-ZZg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2708" y="-913.49325337331345"/>
         </scene>
         <!--Settings-->
         <scene sceneID="lKS-eg-9a4">
@@ -1195,6 +1278,7 @@
                         <segue destination="WUy-0d-4qX" kind="relationship" relationship="viewControllers" id="V9h-Ru-GKM"/>
                         <segue destination="VTh-uD-1tx" kind="relationship" relationship="viewControllers" id="LyZ-YX-UC4"/>
                         <segue destination="zQw-dt-EwK" kind="relationship" relationship="viewControllers" id="xgg-hY-un0"/>
+                        <segue destination="0b8-eY-OFw" kind="relationship" relationship="viewControllers" id="KQj-bb-4pF"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rD4-15-cCR" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1374,7 +1458,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qhj-9L-RTq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4348" y="-913.49325337331345"/>
+            <point key="canvasLocation" x="5287.1999999999998" y="-913.49325337331345"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="S3w-XD-nCx">
@@ -1411,6 +1495,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sgE-P8-wsk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="5041" y="581"/>
+        </scene>
+        <!--Friends-->
+        <scene sceneID="I6p-Jp-3OV">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0b8-eY-OFw" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Friends" id="qyw-74-lZn"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="H0b-Zg-5GI">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="U5j-hJ-51c" kind="relationship" relationship="rootViewController" id="Z1s-Ye-IaL"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3rM-k8-jsP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1768.8" y="-913.49325337331345"/>
         </scene>
     </scenes>
     <resources>
