--- a/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
+++ b/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
@@ -368,7 +368,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L1H-zu-i8O" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4415.1999999999998" y="-659.82008995502258"/>
+            <point key="canvasLocation" x="4049" y="-1058"/>
         </scene>
         <!--Find Gamer-->
         <scene sceneID="lmF-aY-ziP">
@@ -1503,7 +1503,7 @@
         <scene sceneID="I6p-Jp-3OV">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0b8-eY-OFw" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Friends" id="qyw-74-lZn"/>
+                    <tabBarItem key="tabBarItem" title="Friends" image="people" id="qyw-74-lZn"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="H0b-Zg-5GI">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -1547,6 +1547,7 @@
         <image name="overwatch" width="70" height="70"/>
         <image name="password" width="50" height="40"/>
         <image name="pc" width="60" height="60"/>
+        <image name="people" width="30" height="30"/>
         <image name="playstation" width="58" height="58"/>
         <image name="search" width="30" height="30"/>
         <image name="selectedPC" width="60" height="60"/>
@@ -1561,7 +1562,7 @@
         <image name="xbox" width="60" height="60"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="p1K-8C-PN8"/>
+        <segue reference="dSy-8B-ZhX"/>
         <segue reference="CqF-cV-TK5"/>
     </inferredMetricsTieBreakers>
 </document>
