Display contacts in create new chat controller

--- a/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
+++ b/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
@@ -858,7 +858,6 @@
                                             </subviews>
                                         </view>
                                         <constraints>
-                                            <constraint firstItem="vbG-WM-df1" firstAttribute="leading" secondItem="GkR-o9-ohd" secondAttribute="leading" constant="8" id="8gG-Dn-1of"/>
                                             <constraint firstItem="gmS-Ny-mHe" firstAttribute="leading" secondItem="GkR-o9-ohd" secondAttribute="leading" constant="16" id="Acn-yU-fKB"/>
                                             <constraint firstItem="vbG-WM-df1" firstAttribute="centerX" secondItem="gmS-Ny-mHe" secondAttribute="centerX" id="SWC-Ze-TP1"/>
                                             <constraint firstAttribute="trailing" secondItem="vbG-WM-df1" secondAttribute="trailing" constant="8" id="mx6-zz-SfJ"/>
@@ -1024,6 +1023,7 @@
                     <connections>
                         <outlet property="chatTableView" destination="AZN-q9-iPe" id="5tI-YM-BG2"/>
                         <segue destination="fIc-Yj-YGI" kind="show" identifier="chatSegue" id="das-c4-Am8"/>
+                        <segue destination="wBi-iw-OfJ" kind="show" identifier="createNewChatSegue" id="cac-mb-C25"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zqq-W9-1Qw" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1047,6 +1047,36 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AeK-Df-o0V" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3596" y="1496.4017991004498"/>
+        </scene>
+        <!--Create New Chat View Controller-->
+        <scene sceneID="yc2-Su-uJr">
+            <objects>
+                <viewController id="wBi-iw-OfJ" customClass="CreateNewChatViewController" customModule="GamerMatch" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dEI-eq-mpK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7H9-ZS-yHs">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="7H9-ZS-yHs" firstAttribute="trailing" secondItem="NqN-Pe-zlv" secondAttribute="trailing" id="8e8-aR-Sut"/>
+                            <constraint firstItem="7H9-ZS-yHs" firstAttribute="leading" secondItem="NqN-Pe-zlv" secondAttribute="leading" id="962-uf-aXv"/>
+                            <constraint firstItem="7H9-ZS-yHs" firstAttribute="top" secondItem="NqN-Pe-zlv" secondAttribute="top" id="AyH-l8-JaD"/>
+                            <constraint firstItem="7H9-ZS-yHs" firstAttribute="bottom" secondItem="NqN-Pe-zlv" secondAttribute="bottom" id="yCT-dB-7Em"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="NqN-Pe-zlv"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="7H9-ZS-yHs" id="sL1-jA-Q1F"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9c4-RY-lJE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4709.6000000000004" y="1485.6071964017992"/>
         </scene>
         <!--Chat Selected View Controller-->
         <scene sceneID="oFj-NO-HvL">
@@ -1563,6 +1593,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="dSy-8B-ZhX"/>
-        <segue reference="CqF-cV-TK5"/>
+        <segue reference="bgd-bn-Rbp"/>
     </inferredMetricsTieBreakers>
 </document>
