--- a/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
+++ b/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
@@ -851,7 +851,7 @@
         <scene sceneID="yc2-Su-uJr">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9c4-RY-lJE" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="wBi-iw-OfJ" customClass="CreateNewChatViewController" customModule="GamerMatch" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CreateNewChatVC" id="wBi-iw-OfJ" customClass="CreateNewChatViewController" customModule="GamerMatch" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dEI-eq-mpK">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -875,18 +875,18 @@
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="4709.6000000000004" y="1485.6071964017992"/>
+            <point key="canvasLocation" x="4241" y="1546"/>
         </scene>
-        <!--New Group-->
+        <!--New Group Chat Setup View Controller-->
         <scene sceneID="hDE-ZL-IVJ">
             <objects>
-                <viewController storyboardIdentifier="NewGroupVC" id="Cn2-Fg-ma8" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="NewGroupSetupVC" id="Cn2-Fg-ma8" customClass="NewGroupChatSetupViewController" customModule="GamerMatch" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="GNM-6U-Wfr">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="04l-B9-POn" userLabel="Top Container">
-                                <rect key="frame" x="0.0" y="64" width="375" height="169"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="210.5"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IYG-8u-spl" userLabel="addPhotoBtn">
                                         <rect key="frame" x="16" y="24" width="70" height="70"/>
@@ -896,9 +896,9 @@
                                         <state key="normal" title="Button" image="AddPhotoBtn"/>
                                     </button>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Please provide this group a name and an optional picture for the group." textAlignment="natural" adjustsFontForContentSizeCategory="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hjl-7s-cnr" userLabel="Instructions">
-                                        <rect key="frame" x="110" y="96" width="249" height="65"/>
+                                        <rect key="frame" x="110" y="121.5" width="249" height="81"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <fontDescription key="fontDescription" name="ComicSansMS" family="Comic Sans MS" pointSize="17"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YSs-5b-Hgg" userLabel="topBorder">
@@ -921,7 +921,7 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="PuG-qI-g95"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <fontDescription key="fontDescription" name="ComicSansMS" family="Comic Sans MS" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                 </subviews>
@@ -946,7 +946,7 @@
                                 </constraints>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="YpR-6V-jKD">
-                                <rect key="frame" x="0.0" y="233.5" width="375" height="433.5"/>
+                                <rect key="frame" x="0.0" y="211" width="375" height="392"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ZlM-8O-Y0R">
                                     <size key="itemSize" width="50" height="50"/>
@@ -954,16 +954,7 @@
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="ilh-8t-Lb0">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </view>
-                                    </collectionViewCell>
-                                </cells>
+                                <cells/>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -979,11 +970,17 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="MuT-Di-1Dd"/>
                     </view>
-                    <navigationItem key="navigationItem" title="New Group" id="R2x-u4-rGp"/>
+                    <navigationItem key="navigationItem" id="R2x-u4-rGp"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                    <connections>
+                        <outlet property="addPhotoBtn" destination="IYG-8u-spl" id="p8z-Ol-yWd"/>
+                        <outlet property="collectionView" destination="YpR-6V-jKD" id="nCT-su-147"/>
+                        <outlet property="groupTitleTextView" destination="ATe-0k-jHT" id="Qyt-Gy-1y6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xM4-7M-KOb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6381.6000000000004" y="904.49775112443785"/>
+            <point key="canvasLocation" x="5409" y="1546"/>
         </scene>
         <!--Chat Selected View Controller-->
         <scene sceneID="oFj-NO-HvL">
@@ -1245,24 +1242,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3rM-k8-jsP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1768.8" y="-913.49325337331345"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="Otu-rg-k8R">
-            <objects>
-                <navigationController storyboardIdentifier="NewGroupNavVC" automaticallyAdjustsScrollViewInsets="NO" id="dms-x6-LNM" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yRS-pU-68K">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="Cn2-Fg-ma8" kind="relationship" relationship="rootViewController" id="nWN-Um-IAA"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="FGj-Zi-n3v" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="5418" y="906"/>
         </scene>
     </scenes>
     <resources>
