--- a/GamerMatch/GamerMatch/View/FriendRequestTableViewCell.xib
+++ b/GamerMatch/GamerMatch/View/FriendRequestTableViewCell.xib
@@ -15,60 +15,61 @@
         <array key="comic_sans_ms.ttf">
             <string>ComicSansMS</string>
         </array>
+        <array key="comic_sans_ms_bold.ttf">
+            <string>ComicSansMS-Bold</string>
+        </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="FriendRequestTableViewCell" customModule="GamerMatch" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="FriendRequestTableViewCell" customModule="GamerMatch" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM" customClass="FriendRequestTableViewCell" customModule="GamerMatch" customModuleProvider="target">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
-                <autoresizingMask key="autoresizingMask"/>
-                <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zQq-en-v2r">
-                        <rect key="frame" x="88" y="30" width="211" height="21"/>
-                        <fontDescription key="fontDescription" name="ComicSansMS" family="Comic Sans MS" pointSize="15"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aoJ-Q2-Od1">
-                        <rect key="frame" x="16" y="12" width="56.5" height="56"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="aoJ-Q2-Od1" secondAttribute="height" multiplier="1:1" id="VwW-Ga-tC4"/>
-                        </constraints>
-                    </imageView>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HFF-Uc-yBk">
-                        <rect key="frame" x="307" y="24" width="60" height="30"/>
-                        <color key="backgroundColor" red="0.13466796389999999" green="0.090682785239999994" blue="0.79683452070000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="HFF-Uc-yBk" secondAttribute="height" multiplier="2:1" id="6pc-FE-mu7"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" name="ComicSansMS" family="Comic Sans MS" pointSize="15"/>
-                        <state key="normal" title="Accept">
-                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </state>
-                    </button>
-                </subviews>
-                <constraints>
-                    <constraint firstItem="HFF-Uc-yBk" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="2dA-Jz-9RA"/>
-                    <constraint firstItem="aoJ-Q2-Od1" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="TCj-c4-Cjq"/>
-                    <constraint firstItem="aoJ-Q2-Od1" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.15" id="TIe-D2-kMQ"/>
-                    <constraint firstItem="zQq-en-v2r" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="ZQB-K8-6la"/>
-                    <constraint firstAttribute="trailing" secondItem="HFF-Uc-yBk" secondAttribute="trailing" constant="8" id="bt2-yn-5fv"/>
-                    <constraint firstItem="HFF-Uc-yBk" firstAttribute="leading" secondItem="zQq-en-v2r" secondAttribute="trailing" constant="8" id="dzJ-gD-zrZ"/>
-                    <constraint firstItem="aoJ-Q2-Od1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="edw-UQ-hh1"/>
-                    <constraint firstItem="zQq-en-v2r" firstAttribute="leading" secondItem="aoJ-Q2-Od1" secondAttribute="trailing" constant="16" id="f9Y-za-v5n"/>
-                    <constraint firstItem="HFF-Uc-yBk" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.16" id="i6l-FD-Uee"/>
-                </constraints>
-            </tableViewCellContentView>
-            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CHA-Fx-yf6">
+                    <rect key="frame" x="292" y="21.5" width="75" height="37.5"/>
+                    <color key="backgroundColor" red="0.13466796389999999" green="0.090682785239999994" blue="0.79683452070000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="CHA-Fx-yf6" secondAttribute="height" multiplier="2:1" id="nRd-Fe-8Ws"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="ComicSansMS-Bold" family="Comic Sans MS" pointSize="17"/>
+                    <state key="normal" title="Accept">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                </button>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mso-s5-JVj">
+                    <rect key="frame" x="16" y="12" width="56.5" height="56.5"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="mso-s5-JVj" secondAttribute="height" multiplier="1:1" id="MWh-pR-0XU"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hh0-LJ-8kf">
+                    <rect key="frame" x="88.5" y="29.5" width="195.5" height="21"/>
+                    <fontDescription key="fontDescription" name="ComicSansMS" family="Comic Sans MS" pointSize="15"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+            </subviews>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="mso-s5-JVj" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.15" id="3lR-Uw-EOo"/>
+                <constraint firstItem="hh0-LJ-8kf" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="6MP-Wn-CJo"/>
+                <constraint firstItem="CHA-Fx-yf6" firstAttribute="leading" secondItem="hh0-LJ-8kf" secondAttribute="trailing" constant="8" id="Bmh-tQ-1lP"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="CHA-Fx-yf6" secondAttribute="trailing" constant="8" id="FJD-Sy-0eR"/>
+                <constraint firstItem="hh0-LJ-8kf" firstAttribute="leading" secondItem="mso-s5-JVj" secondAttribute="trailing" constant="16" id="YuA-IV-RNj"/>
+                <constraint firstItem="mso-s5-JVj" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="bv3-5n-CTG"/>
+                <constraint firstItem="CHA-Fx-yf6" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.2" id="cJP-VD-DYs"/>
+                <constraint firstItem="mso-s5-JVj" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="fhz-oK-sbv"/>
+                <constraint firstItem="CHA-Fx-yf6" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="xhi-pJ-uTx"/>
+            </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
-                <outlet property="acceptFriendRequestBtn" destination="HFF-Uc-yBk" id="PH5-a0-CYD"/>
-                <outlet property="friendImageView" destination="aoJ-Q2-Od1" id="Vsy-bD-frv"/>
-                <outlet property="friendUsernameLabel" destination="zQq-en-v2r" id="2fO-aS-CHm"/>
+                <outlet property="acceptFriendRequestBtn" destination="CHA-Fx-yf6" id="elT-QM-vXk"/>
+                <outlet property="friendImageView" destination="mso-s5-JVj" id="H9a-yM-nhZ"/>
+                <outlet property="friendUsernameLabel" destination="hh0-LJ-8kf" id="1RT-Fn-Tuz"/>
             </connections>
-            <point key="canvasLocation" x="-507.5" y="-187"/>
-        </tableViewCell>
+            <point key="canvasLocation" x="33.5" y="54"/>
+        </view>
     </objects>
 </document>
